--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
             <version>7.4.0</version>
             <scope>compile</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.appium/java-client -->
+        <dependency>
+            <groupId>io.appium</groupId>
+            <artifactId>java-client</artifactId>
+            <version>7.5.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
